[metadata]
name = ampform
description = Automatically generate symbolic amplitude models for Partial Wave Analysis
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/ampform/issues
    Changelog = https://github.com/ComPWA/ampform/releases
    Documentation = https://ampform.rtfd.io
    Source = https://github.com/ComPWA/ampform
license = GPLv3 or later
keywords =
    HEP
    PWA
    amplitude analysis
    partial wave analysis
    particle physics
    particles
    physics
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed

[options]
python_requires = >=3.6, <3.10
setup_requires =
    setuptools_scm
install_requires =
    attrs >=20.1.0  # on_setattr
    qrules ==0.9.*
    sympy @ git+https://github.com/ComPWA/sympy@ArraySlice
    typing-extensions; python_version <"3.8.0"
packages = find:
package_dir =
    =src

[options.extras_require]
viz =
    graphviz
all =
    %(viz)s
doc =
    %(viz)s
    dataclasses; python_version <'3.7'
    ipympl
    matplotlib
    mpl_interactions
    myst-nb >=0.11  # myst_enable_extensions
    numpy
    pyparsing <3  # https://github.com/ComPWA/ampform/runs/3992112967?check_suite_focus=true#step:7:178
    rich
    Sphinx >=3
    sphinx-book-theme
    sphinx-copybutton
    sphinx-panels
    sphinx-thebe
    sphinx-togglebutton
    sphinxcontrib-bibtex >=2
    sphinxcontrib-hep-pdgref
test =
    black
    ipywidgets  # symplot
    numpy
    pytest
    pytest-cov
    pytest-notebook
    pytest-profiling
    pytest-xdist
format =
    black
    isort
flake8 =
    flake8 >=4  # extend-select
    flake8-blind-except
    flake8-bugbear
    flake8-builtins
    flake8-comprehensions
    flake8-pytest-style
    flake8-rst-docstrings
    flake8-type-ignore; python_version >="3.8.0"
    flake8-use-fstring
    pep8-naming
mypy =
    mypy >=0.570  # attrs support
    types-docutils
    types-pkg-resources
    types-requests
lint =
    %(flake8)s
    %(mypy)s
    pydocstyle
    pylint >=2.5  # good-names-rgxs
    radon
sty =
    %(format)s
    %(lint)s
    %(test)s  # for pytest type hints
    pre-commit >=1.4.0
dev =
    %(all)s
    %(doc)s
    %(sty)s
    %(test)s
    aquirdturtle_collapsible_headings
    jupyterlab
    jupyterlab-code-formatter
    pip-tools >=6.3.0  # for extras_require and direct references
    sphinx-autobuild
    tox >=1.9  # for skip_install, use_develop

[options.packages.find]
where = src

[options.package_data]
ampform =
    py.typed
symplot =
    py.typed
