[metadata]
name = ampform
description = Automatically generate symbolic amplitude models for Partial Wave Analysis
author = Common Partial Wave Analysis
author_email = compwa-admin@ep1.rub.de
maintainer_email = compwa-admin@ep1.rub.de
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/ComPWA/ampform/issues
    Changelog = https://github.com/ComPWA/ampform/releases
    Documentation = https://ampform.rtfd.io
    Source = https://github.com/ComPWA/ampform
license = GPLv3 or later
keywords =
    HEP
    PWA
    amplitude analysis
    partial wave analysis
    particle physics
    particles
    physics
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Typing :: Typed

[options]
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    attrs >=20.1.0  # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
    qrules ==0.9.*, >=0.9.6  # https://github.com/ComPWA/qrules/pull/145
    singledispatchmethod; python_version <"3.8.0"
    sympy >=1.10, <1.12  # module sympy.printing.numpy and array expressions with shape kwarg
    typing-extensions; python_version <"3.8.0"
packages = find:
package_dir =
    =src

[options.extras_require]
viz =
    graphviz
all =
    %(viz)s
doc =
    %(viz)s
    importlib-metadata; python_version <"3.8.0"
    ipympl
    ipython
    ipython !=8.7.0  # https://github.com/ipython/ipython/issues/13845
    matplotlib
    mpl_interactions
    myst-nb >=0.14  # nb_ configuration prefixes
    nbclient >=0.5.5  # https://github.com/executablebooks/jupyter-book/issues/833
    numpy
    rich
    Sphinx >=3
    sphinx-book-theme
    sphinx-codeautolink[ipython]
    sphinx-codeautolink !=0.14.0  # https://github.com/ComPWA/ampform/actions/runs/4032729769/jobs/6932795760#step:8:132
    sphinx-comments
    sphinx-copybutton
    sphinx-design
    sphinx-thebe
    sphinx-togglebutton
    sphinxcontrib-bibtex >=2
    sphinxcontrib-hep-pdgref
test =
    black
    coverage
    coverage !=6.3  # https://github.com/ComPWA/tensorwaves/runs/4988761243
    ipywidgets  # symplot
    nbmake
    nbmake !=1.3.*  # https://github.com/ComPWA/ampform/actions/runs/4116511727/jobs/7106658927#step:3:84
    nbmake !=1.4.*  # https://github.com/ComPWA/ampform/actions/runs/4116455583/jobs/7106554135#step:3:84
    numpy
    pytest
    pytest-cov
    pytest-profiling
    pytest-xdist
format =
    black
    isort
flake8 =
    flake8 >=4  # extend-select
    flake8-blind-except
    flake8-bugbear
    flake8-builtins
    flake8-comprehensions
    flake8-future-annotations
    flake8-pytest-style
    flake8-rst-docstrings
    flake8-type-ignore; python_version >="3.8.0"
    flake8-use-fstring
    pep8-naming
mypy =
    mypy >=0.730  # error code support
    types-docutils
    types-pkg-resources
    types-requests
    types-setuptools
lint =
    %(flake8)s
    %(mypy)s
    pydocstyle
    pylint >=2.5  # good-names-rgxs
    radon
sty =
    %(format)s
    %(lint)s
    %(test)s  # for pytest type hints
    pre-commit >=1.4.0
jupyter =
    aquirdturtle_collapsible_headings
    jupyterlab
    jupyterlab-code-formatter
    jupyterlab-myst; python_version >="3.7.0"
dev =
    %(all)s
    %(doc)s
    %(jupyter)s
    %(sty)s
    %(test)s
    sphinx-autobuild
    tox >=1.9  # for skip_install, use_develop

[options.packages.find]
where = src

[options.package_data]
ampform =
    py.typed
symplot =
    py.typed
